--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>Fanpage de Gatinhos</title>
 
-<meta charset=“utf-8”>
+<meta charset="utf-8">
 
 </head>
 
@@ -14,7 +14,7 @@
 
 <h1>Perfil #catsoninstagram</h1>
 
-<img src=“images/cachorro.jpg” />
+<img src="imagens/cachorro.jpg" />
 
 </body>
 
